--- a/DelphiSettingManager.dproj
+++ b/DelphiSettingManager.dproj
@@ -69,7 +69,7 @@
         <VerInfo_Keys>CompanyName=GalaxyWorks;FileDescription=Delphi Setting Manager;FileVersion=1.3.4.0;InternalName=Delphi Setting Manager;LegalCopyright=Copyright © Erwien Saputra 2005, Denis Grinyuk 2011;LegalTrademarks=;OriginalFilename=;ProductName=Delphi Setting Manager;ProductVersion=1.3;Comments=;Last Compile=2015-11-16 11:58</VerInfo_Keys>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
-        <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
+        <DCC_Namespace>Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
         <BT_BuildType>Debug</BT_BuildType>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=;ProgramID=com.embarcadero.$(MSBuildProjectName)</VerInfo_Keys>
